msg/async: go to open new session when existing already closed

Fixes: http://tracker.ceph.com/issues/20230
Signed-off-by: Haomai Wang <haomai@xsky.com>
(cherry picked from commit 99f580a3959240f99061a9ad48ec591b39a9fd46)

Changes: src/msg/async/AsyncConnection.cc: Mutex::Unlock() in Jewel
           versus mutex::unlock() in master